# Put your release notes or change log information
# in here.

BLD-R2-1-0: (BLD-R2-0-0-BR branch)
  o Addition of extra fields:
    BC2Energy - BPMS:LI24:801:X (in mm)
    BC1Charge - BLEN:LI21:265:AIMAX (in amps)
    BC1Energy - BPMS:LI21:233:X (in mm)

  o Change EBEAMINFO.ebeamBunchLen to EBEAMINFO.ebeamBC2Current

  o Change in outgoing data packet
    Version from 0x1000f to 0x2000f
    Addition of 3 extra words (for the energy/charge above)

  o Modification of bldgen helper code (not tested)

  o Addition of PVs (used only if code runs with CA only):
    BLD:SYS0:500:BC1CHARGE
    BLD:SYS0:500:BC1ENERGY
    BLD:SYS0:500:BC2CHARGE
    BLD:SYS0:500:BC2ENERGY

  o Extension of waveform containing new values

  o Updated BLD Diagnostics panel

  o Addition os PVs to count errors for the new values

BLD-R2-0-0:
  o Read fast data from FCOM.
  o Send BLD multicast data using udpComm/lanIpBasic.
  o Many internal changes (consult 'ChangeLog' for details).
  o Diagnostic waveform devsup reading BLD data from
    multicast network into wf record.
  o Statistics
  o EDM display

BLD-R1-5:
Add bunch length

TODO: Somehow ca_context_destroy causes problem
      Takes long time to connect to a external PV
      Local PV callback has wrong number of elements and wrong value
      Some CA env does not work
      Multicast on RTEMS

BLD-R1-4:
Add drive device support
Add records to read calc result
Move start into drvSup
More beam code for rate less than 30Hz

R1-3:
Clean up, print full array with printf in camon.c
Add more comments, add diagnostics info, add ca_clear_channel for epicsExit and fix bug by init dataAvailable = TRUE
Copy ebeamInfoPreFill into ebeamInfo everytime to correct binvert behaviour
The first version in production.

R1-2:
Enable the second Ethernet port with BSD stack
Clean up camon.c
Fix typo of error message. Add ca_flush_io just in case. Add option for monitoring pulsePVs
Add byte-order swap
Add option to use ca_add_event