@@ -10,9 +10,13 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 # Create and install (or just install) into <top>/db
 # databases, templates, substitutions like this
+DB += bsaBLDEdef.db
+
 DB += BLDMCast.db
 DB += BLDMCastWfRecv.db
 DB += IOC-SYS0-BD01.db
+
+DB_INSTALLS += $(EVENT)/db/eventCodeSequenceAll.db
 
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
