@@ -54,16 +54,16 @@ BASE_MODULE_VERSION=$(EPICS_BASE_VER)
 # http://www-group.slac.stanford.edu/cdsoft/epics/swModules3.htm
 # ===============================================================
 SEQ_MODULE_VERSION=seq-R2.1.4
-EVENT_MODULE_VERSION=event-R3-2-2-br_generaltime-2-0
+EVENT_MODULE_VERSION=event-R3-2-2-br_generaltime-3-0
 GENERALTIME_MODULE_VERSION=generalTime-R2-2-0
 SSUBRECORD_MODULE_VERSION=sSubRecord-R2-2-1
 AUTOSAVE_MODULE_VERSION=autosave-R4-8-lcls2
 #RESTORE_MODULE_VERSION=restore-R2-0-0
 IOCADMIN_MODULE_VERSION=iocAdmin-R3-3-1
 MISCUTILS_MODULE_VERSION=miscUtils-R2-2-2
-FCOM_MODULE_VERSION=fcom-R1-3-9
-FCOMUTIL_MODULE_VERSION=fcomUtil-R1-1-8
-UDPCOMM_MODULE_VERSION=udpComm-R2-2-0
+FCOM_MODULE_VERSION=fcom-R1-3-17
+FCOMUTIL_MODULE_VERSION=fcomUtil-R1-1-17
+UDPCOMM_MODULE_VERSION=udpComm-R2-4-1
 DEVBUSMAPPED_MODULE_VERSION=devBusMapped-R3-0-1
 
 #SEQ_MODULE_VERSION=seq-R2-0-0
