@@ -41,7 +41,7 @@ setenv("EPICS_CAS_BEACON_ADDR_LIST","172.27.11.255")
 #setenv("EPICS_CA_AUTO_ADDR_LIST","NO")
 #setenv("EPICS_CA_ADDR_LIST","172.27.11.54 172.27.9.76 172.27.9.77 172.27.9.78")
 
-#putenv ("EPICS_CA_MAX_ARRAY_BYTES=8000000")
+putenv ("EPICS_CA_MAX_ARRAY_BYTES=1000000")
 #putenv ("EPICS_CA_SERVER_PORT=5068")
 
 ## Register all support components
@@ -60,7 +60,8 @@ dbLoadRecords("db/IOC-SYS0-BD01.db")
 # Set the BLD data records (which are now deprecated,
 # the BLDMcastWfRecv waveform should be used instead)
 # to 'Passive' to effectively disable them.
-dbLoadRecords("db/BLDMCast.db","DIAG_SCAN=Passive, STAT_SCAN=5")
+#dbLoadRecords("db/BLDMCast.db","DIAG_SCAN=Passive, STAT_SCAN=5")
+dbLoadRecords("db/BLDMCast.db","DIAG_SCAN=I/O Intr, STAT_SCAN=5")
 
 # Have a BLD listener running on this IOC and fill a waveform
 # with the BLD data.
